<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="58dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:id="@+id/username"
        android:hint="@string/username"
        android:textSize="24sp"
        android:textColorHint="#fff"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="38dp"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:autofillHints=""
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:id="@+id/password"
        android:hint="@string/password"
        android:textSize="24sp"
        android:textColorHint="#fff"
        android:background="@drawable/edittextbackground"
        android:layout_marginBottom="38dp"
        android:paddingStart="28dp"
        android:autofillHints="password"
        android:inputType="none"
        tools:ignore="RtlSymmetry,TextFields" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:id="@+id/Signup"
        android:text="@string/sign"
        android:textSize="28sp"
        android:layout_marginBottom="38dp"/>

</LinearLayout>