<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="1050dp"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="30dp"
      android:gravity="center_horizontal"
      android:text="@string/sign_up"
      android:textColor="#ffff"
      android:textSize="56dp"
      android:textStyle="bold" />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="29dp"
      android:minHeight="12dp"
      android:text="Sign up with following options"
      android:textColor="@color/white"
      android:textStyle="bold"/>


  <LinearLayout
      android:layout_width="381dp"
      android:layout_height="100dp"
      android:orientation="horizontal">

    <ImageButton
        android:layout_width="133dp"
        android:layout_height="100dp"
        android:background="@drawable/google2"
        android:contentDescription="@string/app_name" />

    <ImageButton
        android:layout_width="133dp"
        android:layout_height="100dp"
        android:background="@drawable/apple"
        android:contentDescription="@string/app_name" />

  </LinearLayout>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="58dp"
      android:id="@+id/name"
      android:hint="Name"
      android:textSize="24dp"
      android:textColorHint="#fff"
      android:background="@drawable/edittextbackground"
      android:layout_marginBottom="38dp"
      android:paddingLeft="28dp"/>
  <EditText
      android:layout_width="match_parent"
      android:layout_height="58dp"
      android:id="@+id/email"
      android:hint="Enter your email"
      android:textSize="24dp"
      android:textColorHint="#fff"
      android:background="@drawable/edittextbackground"
      android:layout_marginBottom="38dp"
      android:paddingLeft="28dp"/>
  <EditText
      android:layout_width="match_parent"
      android:layout_height="58dp"
      android:id="@+id/password"
      android:hint="@string/password1"
      android:textSize="24sp"
      android:textColorHint="#fff"
      android:background="@drawable/edittextbackground"
      android:layout_marginBottom="38dp"
      android:paddingStart="28dp"
      ignore="RtlSymmetry" />


  <Button
      android:id="@+id/Signup"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="38dp"
      android:backgroundTint="#33FA12A4"
      android:text="@string/create_acount"
      android:textSize="28sp" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minHeight="48dp"
      android:height="16dp"
      android:backgroundTint="@color/white"
      android:text="@string/already_have_an_account_log_in"
      android:textColor="@color/white"
      android:textSize="15sp"
      android:textStyle="bold" />

</LinearLayout>